--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -5,7 +5,33 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
     min-height: 100vh;
     width: 100vw;
+    overflow-x: hidden;
+
+    /* scrollbar width*/
+    margin-right: 10px; 
+}
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+  
+/* Track */
+::-webkit-scrollbar-track {
+    background: #111827;
+}
+  
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #172338
+}
+  
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
